# moncic-ci

./: .gitignore  .moncic-ci.yml  .travis.yml  MANIFEST.in  Makefile  NEWS.md  README.md  TESTING.md  ci-chroot-tool  monci  monci.1  monci.1.in  pyproject.toml  run_test_coverage  run_type_checker  setup.cfg  setup.py  test  update_docs  update_manpage
debian/: changelog  control  copyright  gbp.conf  rules
doc/: btrfs-on-file.md  build-config.md  build-debian.md  build-styles.md  custom-os-images.md  image-config.md  image-maintenance.md  moncic-ci-config.md  podman.md  post-build-actions.md  reproducible-testing.md  security.md  shell.md  source-styles.md  testing-on-another-distro.md
fedora/SPECS/: moncic-ci.spec
itests/: base.py  test_build.py  test_container_backends.py  test_maintenance.py  test_nspawn_container.py  test_nspawn_images.py  test_nspawn_transactional.py
moncic/: __main__.py  analyze.py  argparse.py  bootstrap.py  btrfs.py  build.py  build_arpa.py  build_debian.py  ci.py  cli.py  container.py  context.py  deb.py  distro.py  exceptions.py  image.py  images.py  imagestorage.py  libbanana.py  lint.py  machine.py  moncic.py  nspawn.py  osrelease.py  privs.py  run.py  runner.py  session.py  setns.py  source.py  system.py  unittest.py  utils.py
moncic/cli/: __init__.py  base.py  build.py  image.py  (+5 more)
runner/: buildscript.sh  update_image.sh
stubs/: coloredlogs.pyi  texttable.pyi
tests/: source.py  test_bootstrap.py  test_build.py  test_bullseye.py  test_centos7.py  test_centos8.py  test_cli_build.py  test_cli_image.py  test_cli_maint.py  test_cli_query.py  test_cli_run.py  test_debs.py  test_distros.py  test_fedora32.py  test_fedora34.py  test_fedora36.py  test_fedora38.py  test_fedora40.py  test_fedora42.py  test_input_source.py  test_lint.py  test_machine.py  test_maintenance.py  test_nspawn.py  test_nspawn_container.py  test_nspawn_images.py  test_privs.py  test_provision.py  test_rocky8.py  test_rocky9.py  test_run.py  test_source.py  test_source_debian.py  test_source_detect.py  test_source_distro.py  test_source_lint.py  test_source_local.py  test_source_remote.py  test_source_rpm.py  test_sources.py
(+73 files in other folders)
