[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moncic-ci"
dynamic = ["version"]
readme = "README.md"
requires-python = ">= 3.12"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]

[project.urls]
"Source code" = "https://github.com/ARPA-SIMC/moncic-ci"

[tool.black]
line-length = 80

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html
mypy_path = "stubs"
packages = ["moncic"]
strict = true
enable_error_code = "explicit-override"

[[tool.mypy.overrides]]
module = "tblib.*"
ignore_missing_imports = true

[tool.pylint.MAIN]
max-line-length = 80

[tool.pylint.'MESSAGES CONTROL']
disable = "invalid-name,too-many-instance-attributes,too-many-locals,too-many-arguments"

[tool.isort]
# Align isort with flake8
profile = "black"
line_length = 80
order_by_type = false
case_sensitive = true
known_first_party = "moncic"

[tool.pytest.ini_options]
# addopts = ["--import-mode=importlib", "--ignore=doc"]
addopts = ["--ignore=doc", "--ignore=integration-tests-workdir", "--ignore=itests"]
