[metadata]
version = attr: moncic.__version__
maintainer = ARPAE-SIMC
maintainer_email = urpsim@arpae.it
name = moncic-ci
url = https://github.com/ARPA-SIMC/moncic-ci/
license = "GPLV2+"
license_files = "LICENSE"
description = "Simple CI tool"
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Topic :: Software Development :: Testing

[options]
packages =
    moncic
    moncic.cli
    moncic.container
    moncic.distro
    moncic.mock
    moncic.nspawn
    moncic.operations
    moncic.podman
    moncic.provision
    moncic.source
    moncic.utils
scripts = monci
python_requires = >= 3.12
install_requires =
    pyyaml
    ruamel.yaml
    coloredlogs
    texttable
    requests
    tblib
    GitPython


[flake8]
max-line-length = 120

[pycodestyle]
max-line-length = 120
